--- a/web/src/locales/ru.json
+++ b/web/src/locales/ru.json
@@ -254,13 +254,23 @@
   },
   "packing": {
     "title": "фасовка",
-    "selector": {
-      "one": "1 день в ряд",
-      "two": "2 дня в ряд",
-      "three": "3 дня в ряд",
-      "four": "4 дня в ряд",
-      "five": "5 дней в ряд",
-      "six": "6 дней в ряд"
+    "options": {
+      "optionsButton": "Настройки",
+      "columnsCountTitle": "Дней в ряд",
+      "selector": {
+        "one": "1 день в ряд",
+        "two": "2 дня в ряд",
+        "three": "3 дня в ряд",
+        "four": "4 дня в ряд",
+        "five": "5 дней в ряд",
+        "six": "6 дней в ряд"
+      },
+      "filters": {
+        "showBreakfasts": "Показывать завтраки",
+        "showLunches": "Показывать обеды",
+        "showDinners": "Показывать ужины",
+        "showSnacks": "Показывать перекусы"
+      }
     },
     "dayPrefix": "День",
     "productColumn": "Продукт",
